EasyExample.java замена deprecated метода